--- a/D2W4 STUTERN Classwork.css
+++ b/D2W4 STUTERN Classwork.css
@@ -74,7 +74,7 @@ background-color: #e6f8f9;
     /* bottom: 10rem; */
     border-radius: 0.5rem 0.5rem 0 0;
     position: relative;
-    background: url(../../../../Downloads/red\ girl.png);
+    background: url("red\ girl.png");
     background-position: center;
     background-size: cover;
 }
@@ -86,7 +86,7 @@ background-color: #e6f8f9;
     position: relative;
     bottom: 33rem;
     border-radius: 0.5rem;
-    background: url(../../../../Downloads/blue\ girl.png);
+    background: url("blue\ girl.png");
     background-position: center;
     background-size: cover;
 }
